# akari

./: .gitignore  .idf_component_ignore  CMakeLists.txt  Makefile  README.md  akari.h  akari_core.c  akari_event.c  akari_event.h  akari_event_epoll.c  akari_event_poll.c  akari_internal.h
docs/: api.md  architecture.md  embedded.md
examples/: README.md  test_stb.c
examples/basic_esp32/: CMakeLists.txt  README.md
examples/basic_esp32/main/: CMakeLists.txt  idf_component.yml  index.html  main.c  secrets.h  wifi.c
examples/basic_linux/: Makefile  README.md  akari_linux_demo  index.html  main.c
examples/basic_server/: index.html  main.c
include/: akari_core.h  akari_event.h  akari_http.h  akari_internal.h
scripts/: gen_single_header.py  install.sh
src/: akari_core.c  akari_event.c  akari_event_epoll.c  akari_event_poll.c  akari_http.c
tests/: benchmark.sh  fuzz_target.c
tests/corpus/: get_home.txt  post_data.txt
tests/security/: run_tests.sh  test_security.c  test_server.c
tools/: akari_cli.c  akari_lib.h  templates.h
